--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         #mobile-menu.opened {
             transform: translateX(100%);
         }
+        @media screen and (min-width: 320px) and (max-width:767px){
+            .container{
+                width: 100vw;
+                height: 100vh;
+            }
+        }
     </style>
 </head>
 
