--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body.scroll-lock {
+            overflow: hidden;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+        }
+
         a {
             text-decoration: none;
             font-size: 24px;
@@ -45,10 +52,11 @@
             justify-content: center;
             align-items: center;
             position: absolute;
-            left: -100%;
-            bottom: 20vh;
+            /* left: -100%; */
+            bottom: 0;
             width: 100%;
-            height: 50vh;
+            height: 0px;
+            visibility: hidden;
             background-color: rgba(245, 245, 245, 0.8);
             backdrop-filter: blur(5px);
             -webkit-backdrop-filter: blur(5px);
@@ -57,10 +65,13 @@
         }
 
         #mobile-menu.opened {
-            transform: translateX(100%);
+            /* transform: translateX(100%); */
+            height: 70%;
+            visibility: visible;
         }
-        @media screen and (min-width: 320px) and (max-width:767px){
-            .container{
+
+        @media screen and (min-width: 320px) and (max-width:767px) {
+            .container {
                 width: 100vw;
                 height: 100vh;
             }
@@ -145,36 +156,49 @@
         const burgerMenuBtn = document.querySelector('.menu__mobile-btn');
         burgerMenuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('opened');
-            burgerMenuBtn.classList.toggle('opened');
         })
 
 
 
         // const mobileMenu = document.getElementById('mobile-menu');
-        let startX;
+        let startY;
 
-        mobileMenu.addEventListener('touchstart', handleTouchStart, false);
-        mobileMenu.addEventListener('touchmove', handleTouchMove, false);
+        document.addEventListener('touchstart', handleTouchStart, false);
+        document.addEventListener('touchmove', handleTouchMove, false);
 
         function handleTouchStart(event) {
-            startX = event.touches[0].clientX;
+            startY = event.touches[0].clientY;
         }
 
         function handleTouchMove(event) {
-            if (!startX) {
-                return; // Убедимся, что startX установлен
+            if (!startY) {
+                return; // Убедимся, что startY установлен
             }
 
-            const currentX = event.touches[0].clientX;
-            const diffX = startX - currentX;
+            const currentY = event.touches[0].clientY;
+            const diffY = currentY - startY;
+            console.log(diffY);
 
-            if (diffX > 50) { // Условие для смахивания
-                // Свернуть меню или добавить другие действия при смахивании
-                mobileMenu.style.display = 'none';
+            if (diffY > 10) { // Условие для смахивания вниз
+                // Свернуть меню или добавить другие действия при смахивании вниз
+                mobileMenu.classList.remove('opened');
             }
 
-            startX = null; // Сброс startX
+            startY = null; // Сброс startY
         }
+
+        let isMenuOpen = false;
+
+        mobileMenu.addEventListener('click', function () {
+            isMenuOpen = !isMenuOpen;
+            const body = document.querySelector('body');
+
+            if (isMenuOpen) {
+                body.classList.add('scroll-lock');
+            } else {
+                body.classList.remove('scroll-lock');
+            }
+        });
     </script>
 </body>
 
