--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body.scroll-lock {
-            overflow: hidden;
-            position: fixed;
-            width: 100%;
-            height: 100%;
-        }
+    
 
         a {
             text-decoration: none;
@@ -51,7 +46,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            position: absolute;
+            /* position: absolute; */
+            position: fixed;
             /* left: -100%; */
             bottom: 0;
             width: 100%;
@@ -120,7 +116,7 @@
             voluptatem? Exercitationem doloribus at in temporibus obcaecati similique dolores explicabo!
         </div>
         <!-- Ваше мобильное меню -->
-        <button class="menu__mobile-btn">
+        <button id="menuButton" class="menu__mobile-btn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_5714_3139)">
                     <path
@@ -156,11 +152,15 @@
         const burgerMenuBtn = document.querySelector('.menu__mobile-btn');
         burgerMenuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('opened');
+            // document.body.classList.add('scroll-lock');
         })
 
-
-
-        // const mobileMenu = document.getElementById('mobile-menu');
+        document.addEventListener('touchstart', function (event) {
+            console.log(event.target);
+            if (!event.target.closest('#menuButton') && !event.target.closest('#mobile-menu')) {
+                mobileMenu.classList.remove('opened');
+            } 
+        });
         let startY;
 
         document.addEventListener('touchstart', handleTouchStart, false);
@@ -177,28 +177,13 @@
 
             const currentY = event.touches[0].clientY;
             const diffY = currentY - startY;
-            console.log(diffY);
 
             if (diffY > 10) { // Условие для смахивания вниз
                 // Свернуть меню или добавить другие действия при смахивании вниз
                 mobileMenu.classList.remove('opened');
             }
-
             startY = null; // Сброс startY
         }
-
-        let isMenuOpen = false;
-
-        mobileMenu.addEventListener('click', function () {
-            isMenuOpen = !isMenuOpen;
-            const body = document.querySelector('body');
-
-            if (isMenuOpen) {
-                body.classList.add('scroll-lock');
-            } else {
-                body.classList.remove('scroll-lock');
-            }
-        });
     </script>
 </body>
 
