--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         .container {
             background-color: teal;
-            width: 400px;
-            height: 800px;
+            /* width: 400px;
+            height: 800px; */
             margin: 0 auto;
             overflow: hidden;
             overflow-y: scroll;
