--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             padding: 4px 16px;
             border-radius: 30px;
             border: none;
-            position: sticky;
-            bottom: 10px;
+            position: fixed;
+            bottom: 30px;
             left: 50%;
             transform: translateX(-50%);
             cursor: pointer;
