--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="test.jpg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="400">
+    <meta property="og:title" content="DEV/ЗАВОД">
     <title>Document</title>
     <style>
-    
-
         a {
             text-decoration: none;
             font-size: 24px;
@@ -68,7 +69,6 @@
             height: 70%;
             visibility: visible;
         }
-
     </style>
 </head>
 
@@ -156,7 +156,7 @@
             console.log(event.target);
             if (!event.target.closest('#menuButton') && !event.target.closest('#mobile-menu')) {
                 mobileMenu.classList.remove('opened');
-            } 
+            }
         });
         let startY;
 
