--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="400">
     <meta property="og:title" content="DEV/ЗАВОД">
-    <title>Document</title>
+    <title>DEV/ЗАВОДt</title>
     <style>
         a {
             text-decoration: none;
