--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="test.jpg">
-    <meta property="og:image:width" content="300">
-    <meta property="og:image:height" content="400">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:title" content="DEV/ЗАВОД">
+    <meta property="og:description" content="Мы собираем сайты, как конструкторы, из лучших деталей.">
     <title>DEV/ЗАВОДt</title>
     <style>
         a {
