--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="test.jpg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image" content="https://vetslovepets.com.au/cdn/shop/articles/iStock-1358309706_1.jpg?v=1715308441&width=640">
+    <meta property="og:image:width" content="537">
+    <meta property="og:image:height" content="240">
     <meta property="og:title" content="DEV/ЗАВОД">
     <meta property="og:description" content="Мы собираем сайты, как конструкторы, из лучших деталей.">
     <title>DEV/ЗАВОДt</title>
