--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta property="og:image" content="https://vetslovepets.com.au/cdn/shop/articles/iStock-1358309706_1.jpg?v=1715308441&width=640"> -->
-    <meta property="og:image" content="test.jpg">
+    <meta property="og:image" content="Logo_zavod.png">
     <meta property="og:image:width" content="537">
     <meta property="og:image:height" content="240">
     <meta property="og:title" content="DEV/ЗАВОД">
