--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="Logo_zavod.png">
+    <meta property="og:image" content="item8.webp">
     <meta property="og:image:width" content="537">
     <meta property="og:image:height" content="240">
     <meta property="og:title" content="DEV/ЗАВОД">
