--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <meta property="og:image" content="test.jpg">
     <meta property="og:image:width" content="537">
     <meta property="og:image:height" content="240">
-    <meta property="og:title" content="DEV/ЗАВОД">
-    <meta property="og:description" content="Мы собираем сайты, как конструкторы, из лучших деталей.">
-    <title>DEV/ЗАВОД</title>
-    <link rel="manifest" href="manifest.json">
+    <meta property="og:title" content="PWA APP">
+    <meta property="og:description" content="Testing PWA application">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>PWA APP</title>
+    <link rel="manifest" href="/manifest.json">
     <style>
         a {
             text-decoration: none;
