--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>PWA APP</title>
     <link rel="manifest" href="/manifest.webmanifest">
     <style>
